--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,7 @@
+# Конфигурация pytest для проекта Test_Bank.
+# pythonpath = . — позволяет импортировать модули из корня проекта (например, src.main.api).
+# markers: api — метка для API-тестов; запуск только API-тестов: pytest -m api
+
 [pytest]
 
 markers =
