--- a/resources/urls.properties
+++ b/resources/urls.properties
@@ -1,1 +1,4 @@
+# URL бэкенда для API-тестов. Используется классом Config (src/main/api/configs/config.py).
+# Измените значение при другом хосте/порте сервера.
+
 backendUrl=http://localhost:4111/api
